Add CLI options usage examples